recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: value =! is not a member of Int
  if(level=!0){
          ^Sierpinski:2: error: not found: value spiepinski
    spiepinski(level-1, length/2)
    ^Sierpinski:5: error: not found: value spiepinski
    spiepinski(level-1, length/2)
    ^Sierpinski:8: error: not found: value spiepinski
    spiepinski(level-1, length/2)
    ^Sierpinski:11: error: not found: value spiepinski
    spiepinski(level-1, length/2)
    ^