recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if(level=!0){
    spiepinski(level-1, length/2)
    avance(length)
    droite(120)
    spiepinski(level-1, length/2)
    avance(length)
    droite(120)
    spiepinski(level-1, length/2)
    avance(length)
    droite(120)
    spiepinski(level-1, length/2)
    avance(length)
    droite(120)
    sierpinski(level-1,length/2)
  }
}